# TextDetection

./: CMakeLists.txt  README
cmake/: FindEigen2.cmake  FindEigen3.cmake
examples/MaximallyStableRegions/: CMakeLists.txt
examples/MaximallyStableRegions/src/: MSER.cpp
include/TextDetection/: TextAreaFinder.h
interfaces/python/: TextDetection.i
src/: TextAreaFinder.cpp
